# RPG_Game_SDL_C

./: .gitignore  CMakeLists.txt  LINUX_ENV.md  README.md  RPG_LOR_Game.sln
.github/workflows/: c-cpp.yml
RPG_LOR_Game/: Button.cpp  Button.h  CMakeLists.txt  ECS.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  GameOverScreen.cpp  GameOverScreen.h  Guard.cpp  Guard.h  Hero.cpp  Hero.h  Item.cpp  Item.h  Makefile  Map.cpp  Map.h  MapScreen.cpp  MapScreen.h  MenuScreen.cpp  MenuScreen.h  RPG_LOR_Game.vcxproj  Screen.h  Source.cpp  TextureManager.cpp  TextureManager.h  audio.cpp  audio.h  main.cpp
RPG_LOR_Game/resources/: map_basic.txt
RPG_LOR_Game/x64/Debug/RPG_LOTR_Game.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  RPG_LOTR_Game.lastbuildstate
RPG_LOR_Game/x64/Release/: RPG_LOTR_Game.exe.recipe  RPG_LOTR_Game.iobj  RPG_LOTR_Game.ipdb
RPG_LOR_Game/x64/Release/RPG_LOTR_Game.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  RPG_LOTR_Game.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
test/: CMakeLists.txt  main.cpp  starting_test.sh
x64/Release/graphics/: headpng
